[gd_scene load_steps=5 format=3 uid="uid://b2numvphf2kau"]

[ext_resource type="Script" uid="uid://bnqbd6ejqkeaw" path="res://systems/menus/maaack/scenes/menus/options_menu/video/video_options_menu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bsxh6v7j0257h" path="res://systems/menus/maaack/scenes/menus/options_menu/option_control/toggle_option_control.tscn" id="3_uded6"]
[ext_resource type="PackedScene" uid="uid://c01ayjblhcg1t" path="res://systems/menus/maaack/scenes/menus/options_menu/option_control/vector_2_list_option_control.tscn" id="4_gwtfq"]
[ext_resource type="PackedScene" uid="uid://b6bl3n5mp3m1e" path="res://systems/menus/maaack/scenes/menus/options_menu/option_control/list_option_control.tscn" id="4_yt1en"]

[node name="Video" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="FullscreenControl" parent="VBoxContainer" instance=ExtResource("3_uded6")]
unique_name_in_owner = true
layout_mode = 2
option_name = "Fullscreen"
option_section = 3
key = "FullscreenEnabled"
section = "VideoSettings"

[node name="ResolutionControl" parent="VBoxContainer" instance=ExtResource("4_gwtfq")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Select a screen size"
option_values = [Vector2i(640, 360), Vector2i(960, 540), Vector2i(1024, 576), Vector2i(1280, 720), Vector2i(1600, 900), Vector2i(1920, 1080), Vector2i(2048, 1152), Vector2i(2560, 1440), Vector2i(3200, 1800), Vector2i(3840, 2160)]
option_titles = Array[String](["640 x 360", "960 x 540", "1024 x 576", "1280 x 720", "1600 x 900", "1920 x 1080", "2048 x 1152", "2560 x 1440", "3200 x 1800", "3840 x 2160"])
option_name = "Resolution"
option_section = 3
key = "ScreenResolution"
section = "VideoSettings"
property_type = 6

[node name="ShowFPSControl" parent="VBoxContainer" instance=ExtResource("3_uded6")]
unique_name_in_owner = true
layout_mode = 2
option_name = "ShowFPS"
option_section = 3
key = "ShowFPSCounter"
section = "VideoSettings"

[node name="MaxFPSControl" parent="VBoxContainer" instance=ExtResource("4_yt1en")]
unique_name_in_owner = true
layout_mode = 2
lock_titles = true
option_values = [60, 120, 144, 240, 0]
option_titles = Array[String](["60", "120", "144", "240", "Unlimited"])
lock_config_names = true
option_name = "MaxFPS"
option_section = 3
key = "MaxFPS"
section = "VideoSettings"
property_type = 2
default_value = -1

[node name="VSyncModeControl" parent="VBoxContainer" instance=ExtResource("4_yt1en")]
unique_name_in_owner = true
layout_mode = 2
lock_titles = true
option_values = [0, 1, 2]
option_titles = Array[String](["VSync Disabled", "VSync Enabled", "VSync Adaptive"])
option_name = "VSyncMode"
option_section = 3
key = "VSyncMode"
section = "VideoSettings"
property_type = 2

[node name="AntialiasingControl" parent="VBoxContainer" instance=ExtResource("3_uded6")]
unique_name_in_owner = true
layout_mode = 2
option_name = "Anti-Aliasing"
option_section = 3
key = "AntiAliasing"
section = "VideoSettings"

[connection signal="setting_changed" from="VBoxContainer/FullscreenControl" to="." method="_on_fullscreen_control_setting_changed"]
[connection signal="setting_changed" from="VBoxContainer/ResolutionControl" to="." method="_on_resolution_control_setting_changed"]
[connection signal="setting_changed" from="VBoxContainer/ShowFPSControl" to="." method="_on_show_fps_control_setting_changed"]
[connection signal="setting_changed" from="VBoxContainer/MaxFPSControl" to="." method="_on_max_fps_control_setting_changed"]
[connection signal="setting_changed" from="VBoxContainer/VSyncModeControl" to="." method="_on_v_sync_mode_control_setting_changed"]
[connection signal="setting_changed" from="VBoxContainer/AntialiasingControl" to="." method="_on_antialiasing_control_setting_changed"]
